--- a/mkti/site/index.html
+++ b/mkti/site/index.html
@@ -144,7 +144,7 @@
 								<ul class="sf-menu">
 									<li class="current men"><a onClick="goToByScroll('page1'); return false;" href="#">Home </a> <strong class="hover"></strong></li>
 									<li class="men1"><a onClick="goToByScroll('page2'); return false;" href="#">About Us</a><strong class="hover"></strong></li>
-									<li class=" men2"><a onClick="goToByScroll('page3'); return false;" href="#">Events</a> <strong class="hover"></strong></li>
+									<li class=" men2"><a onClick="goToByScroll('page3'); return false;" href="#">What's in Store</a> <strong class="hover"></strong></li>
 									<li class=" men3"><a onClick="goToByScroll('page4'); return false;" href="#">Sponsors</a> <strong class="hover"></strong></li>
 									<li class=" men4"><a onClick="goToByScroll('page5'); return false;" href="#">Contacts</a> <strong class="hover"></strong></li>
 								</ul>
@@ -288,7 +288,7 @@
 
 							<div class="sponstab">
 								<div class="container_12">
-									<div class="grid_12">
+									<div class="grid_17">
 										<h3>Our Sponsors</h3>
 										<h4> We appreciate the contributions of our Major Sponsor for Mukti '16</h4>
 										<ul class="car c-style-3">
