--- a/mkti/site/index.html
+++ b/mkti/site/index.html
@@ -210,6 +210,13 @@
 
 
 					<div id="page3" class="content">
+					<div class="container_12">
+								<div class="grid_14">
+									<div class="slogan">
+									<h3>Keynote</h3>
+									</div>
+								</div>
+							</div>
 						<div class="container_12">
 							<div class="grid_14">
 								<div class="slogan" >
@@ -281,6 +288,13 @@
 									</figure>
 								</li>
 							</ul>
+							<div class="container_12">
+								<div class="grid_14">
+									<div class="slogan">
+									<h3>Workshops</h3>
+									</div>
+								</div>
+							</div>
 						</div>
 
 
